hphp/test/slow/parser/variable_in_enum2.php.expectf

Fatal error: Expected constant expression for initializer in %s/variable_in_enum2.php on line 3
